--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
+    "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
